[gd_scene load_steps=5 format=3 uid="uid://b7hgmg8e8ia7b"]

[ext_resource type="Script" uid="uid://v8ve423fylap" path="res://Funkin/Backend/Internal/SoundTray.gd" id="1_5mtln"]
[ext_resource type="Texture2D" uid="uid://bffjq0d8d526s" path="res://Assets/Images/soundtray/volumebox.png" id="2_n75nl"]
[ext_resource type="Texture2D" uid="uid://b8hh1q03r3hwe" path="res://Assets/Images/soundtray/bars.png" id="3_edjxd"]
[ext_resource type="AudioStream" uid="uid://bckxp16b77dvb" path="res://Assets/Sounds/soundtray/Voldown.ogg" id="4_n75nl"]

[node name="SoundTray" type="Node2D"]
script = ExtResource("1_5mtln")

[node name="Volumebox" type="Sprite2D" parent="."]
texture = ExtResource("2_n75nl")

[node name="ClipRect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="BarVolume" type="Sprite2D" parent="ClipRect"]
texture = ExtResource("3_edjxd")
centered = false

[node name="HideTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="VolumeUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n75nl")

[node name="VolumeDown" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n75nl")

[node name="VolumeMAX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n75nl")
